@@ -1,3 +1,10 @@
+2012-02-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/gcc-torture-execute-pr44468.c,
+	  support/regression/tests/gcc-torture-execute-pr43438.c,
+	  support/regression/tests/gcc-torture-execute-pr45034.c:
+	  Disable tests for older gcc.
+
 2012-02-17 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/z80/divunsigned.s,
